# Qt3D_compute_particles_cpp

./: CMakeLists.txt  README.md  compute-particles-cpp.qrc
shader/: particles.comp  particles.csh  particles.frag  particles.vert
src/: computeframegraph.cpp  computeframegraph.h  computematerial.cpp  computematerial.h  main.cpp  main.qml
